<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <!-- Inside the layout tag it is possible to set the data tag in order to set one or many variables. For this example we are having an User property-->
    <data>

        <variable
            name="user"
            type="com.sushant.androidkotlin.homeautomation.models.User"
            />
    </data>


<RelativeLayout android:id="@+id/item_people"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                >

            <ImageView
                android:id="@+id/image_people"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="100dp"
                android:src="@drawable/ic__user__outline"/>


            <TextView
                android:id="@+id/label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_below="@+id/image_people"
                android:text="@{user.component1() + user.component2()}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                tools:text="Sushant Attada"
                tools:ignore="RtlCompat" />

            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_first_name"
                    android:id="@+id/first_name_id"
                    android:textSize="32sp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:id="@+id/label_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/first_name_id"
                    android:textColor="@android:color/secondary_text_light"
                    android:text="@{user.component1()}"
                    android:textSize="32sp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="8dp"
                    tools:text="first_name"
                    tools:ignore="RtlCompat" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_last_name"
                android:id="@+id/last_name_id"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/label_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@+id/last_name_id"
                android:text="@{user.component2()}"
                android:textColor="@android:color/secondary_text_light"
                tools:text="last_name"
                tools:ignore="RtlCompat" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_birth_date"
                android:id="@+id/birth_date_id"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/label_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/birth_date_id"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:text="@{user.component3()}"
                tools:text="12345678"
                tools:ignore="RtlCompat" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>


</layout>